--- a/cotacoes-core/src/main/resources/application.yml
+++ b/cotacoes-core/src/main/resources/application.yml
@@ -14,3 +14,9 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+  api-docs:
+    path: /api-docs
